--- a/staticman.yml
+++ b/staticman.yml
@@ -7,11 +7,11 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["name", "email", "body"]
+  allowedFields: ["name", "email", "body", "reply_to"]
 
   # When allowedOrigins is defined, only requests sent from one of the domains
   # listed will be accepted.
-  #allowedOrigins: ["localhost", "battleofbrothers.com"]
+  #allowedOrigins: ["localhost", "networkhobo.com", "networkhobo.netlify.com"]
 
   # (*) REQUIRED
   #
@@ -37,22 +37,22 @@ comments:
   moderation: true
 
   # Name of the site. Used in notification emails.
-  name: "Battle of Brothers"
+  name: "Network Hobo"
 
   # (*) REQUIRED
   #
   # Destination path (directory) for the data files. Accepts placeholders.
-  path: "data/comments/{options.entryId}"
+  path: "data/comments/{options.slug}"
 
   # (*) REQUIRED
   #
   # Destination path (filename) for the data files. Accepts placeholders.
-  filename: "{@id}"
+  filename: "comment-{@timestamp}"
 
   # Names of required files. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  #requiredFields: ["name", "body"]
-
+  requiredFields: ["name", "body"]
+ 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
   transforms:
