--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "hugo"
   publish = "public"
+
+[context.production.environment]
+  HUGO_VERSION = "0.40.2"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.40.2"
